Even more Travolta

--- a/404.html
+++ b/404.html
@@ -202,7 +202,7 @@
 
 
 <div class="d-flex justify-content-center">
-<img src="/images/travolta.png" class="full" />
+<img src="/images/travolta.png" class="travolta" />
 </div>
 <style>
 h1 { display: none; }
