Added articles and news for Editor Enhancer

--- a/es/noticias/editor-enhancer-033.html
+++ b/es/noticias/editor-enhancer-033.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <nav class="navbar navbar-light">
 <div id="navbar-container" class="container">
 
-<a class="navbar-logo d-flex justify-content-start align-items-center" href="/">
+<a class="navbar-logo d-flex justify-content-start align-items-center" href="/es">
 <img src="/images/logo64x64.png">
 <p class="navbar-logo-text" ">xeleh</p>
 </a>
@@ -77,25 +77,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/about">About</a></td>
+        <td><a href="/es/acerca">Acerca</a></td>
       </tr>
       <tr>
-        <td><a href="/projects">Projects</a></td>
-      </tr>
-    </tbody>
-  </table>
-
-</div>
-
-<div class="col-12 col-sm-3">
-
-  <table>
-    <tbody>
-      <tr>
-        <td><a href="/services">Services</a></td>
-      </tr>
-      <tr>
-        <td><a href="mailto:pr@xeleh.com">Contact</a></td>
+        <td><a href="/es/proyectos">Proyectos</a></td>
       </tr>
     </tbody>
   </table>
@@ -107,10 +92,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/articles">Articles</a></td>
+        <td><a href="/es/servicios">Servicios</a></td>
       </tr>
       <tr>
-        <td><a href="/resources">Resources</a></td>
+        <td><a href="mailto:pr@xeleh.com">Contacto</a></td>
       </tr>
     </tbody>
   </table>
@@ -122,10 +107,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/news">News</a></td>
+        <td><a href="/es/articulos">Artículos</a></td>
       </tr>
       <tr>
-        <td><a href="/downloads">Downloads</a></td>
+        <td><a href="/es/recursos">Recursos</a></td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
+
+<div class="col-12 col-sm-3">
+
+  <table>
+    <tbody>
+      <tr>
+        <td><a href="/es/noticias">Noticias</a></td>
+      </tr>
+      <tr>
+        <td><a href="/es/descargas">Descargas</a></td>
       </tr>
     </tbody>
   </table>
@@ -141,16 +141,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/about">About</a></td>
+        <td><a href="/es/acerca">Acerca</a></td>
       </tr>
       <tr>
-        <td><a href="/projects">Projects</a></td>
+        <td><a href="/es/proyectos">Proyectos</a></td>
       </tr>
       <tr>
-        <td><a href="/resources">Resources</a></td>
+        <td><a href="/es/recursos">Recursos</a></td>
       </tr>
       <tr>
-        <td><a href="mailto:pr@xeleh.com">Contact</a></td>
+        <td><a href="mailto:pr@xeleh.com">Contacto</a></td>
       </tr>
     </tbody>
   </table>
@@ -162,16 +162,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/news">News</a></td>
+        <td><a href="/es/noticias">Noticias</a></td>
       </tr>
       <tr>
-        <td><a href="/services">Services</a></td>
+        <td><a href="/es/servicios">Servicios</a></td>
       </tr>
       <tr>
-        <td><a href="/articles">Articles</a></td>
+        <td><a href="/es/articulos">Artículos</a></td>
       </tr>
       <tr>
-        <td><a href="/downloads">Downloads</a></td>
+        <td><a href="/es/descargas">Descargas</a></td>
       </tr>
     </tbody>
   </table>
@@ -190,24 +190,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="container breadcrumb d-flex flex-nowrap bg-transparent">
 <div class="breadcrumb-item flex-fill">
 
-	<a href="/"><i class="fa fa-home"></i></a>
+	<a href="/es/"><i class="fa fa-home"></i></a>
 
 </div>
 
 
-<div class="breadcrumb-item"><a href=".">News</a>
+<div class="breadcrumb-item"><a href=".">Noticias</a>
 </div>
 
 
-<div class="breadcrumb-item">Editor Enhancer 0.3.0</div>
+<div class="breadcrumb-item">Editor Enhancer 0.3.3</div>
 
 
 
 
 
 
-<span class="lang-link disabled">EN</span>
-<a class="lang-link" href="/es/noticias/editor-enhancer-030.html">ES</a>
+<a class="lang-link" href="/news/editor-enhancer-033.html">EN</a>
+<span class="lang-link disabled">ES</span>
 
 
 </div>
@@ -217,16 +217,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="p-0 col-12 col-md-8 offset-md-2 col-sm-10 offset-sm-1" markdown="1" >
 
 <div class="page-head">
-<h1>Editor Enhancer 0.3.0</h1>
+<h1>Editor Enhancer 0.3.3</h1>
 
-<div><p class="page-date">26 / 04 / 2020</p></div>
+<div><p class="page-date">28 / 04 / 2020</p></div>
 </div>
 
 
-<p>Editor Enhancer is a collection of utilities aimed to enhance the Unity Editor. This package will be available for free on Github.
+<p>Bueno, pues esta es una de las cosas nuevas en las que he estado trabajando. Se llama Editor Enhancer y es una colección de utilidades cuyo propósito es mejorar el editor de Unity.
 <!--more--></p>
 
-<p>In progress…</p>
+<p>El paquete incluye una barra lateral configurable, algunos atajos de menú convenientes y una opción para activar el tema oscuro de Unity, algo de lo que he preferido hablar en un <a href="/es/articulos/el-tema-oscuro">artículo aparte</a>.</p>
 
 <!-- video -->
 <div class="video-wrapper">
@@ -234,6 +234,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ohcXie-9VUM?showinfo=0" allowfullscreen=""></iframe>
 </div>
 </div>
+
+<p>Todo eso de momento, pero tengo ya en mente otras varias utilidades que creo que serán también muy interesantes tales como:</p>
+
+<ul>
+  <li>Un controlador de doble click para ventanas.</li>
+  <li>Un controlador de acciones al entrar y salir del modo Play.</li>
+  <li>Barras de herramientas “overlay” (o sea, sobre las ventanas), para las cuales ya tengo alguna que otra acción preparada.</li>
+  <li>Una ventana de Build que puedas anclar en el editor junto a las otras en vez de tenerla flotando.</li>
+  <li>Una barra de herramientas fácilmente configurable.</li>
+  <li>Una utilidad para tener notas en el editor que no esté basada en el típico MonoBehaviour.</li>
+  <li>Un centro de notificaciones, porque bueno, si ya tenemos una barra lateral, tenemos el sitio perfecto para poner un icono con la típica insignia de una manera no invasiva, verdad?</li>
+  <li>Y alguna otra sorpresa…</li>
+</ul>
+
+<hr />
+<p>Tenéis el código y las instrucciones para instalar el paquete aquí:</p>
+
+<table>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/xeleh/enhancer">Editor Enhancer - Github</a></td>
+    </tr>
+  </tbody>
+</table>
+
 
 
 <hr>
@@ -252,31 +277,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/about">About</a></td>
+        <td><a href="/es/acerca">Acerca</a></td>
       </tr>
       <tr>
-        <td><a href="/projects">Projects</a></td>
+        <td><a href="/es/proyectos">Proyectos</a></td>
       </tr>
       <tr>
-        <td><a href="/experience">Experience</a></td>
-      </tr>
-    </tbody>
-  </table>
-
-</div>
-
-<div class="col-12 col-sm-3">
-
-  <table>
-    <tbody>
-      <tr>
-        <td><a href="/services">Services</a></td>
-      </tr>
-      <tr>
-        <td><a href="mailto:pr@xeleh.com">Contact</a></td>
-      </tr>
-      <tr>
-        <td><a href="/legal">Legal</a></td>
+        <td><a href="/es/experiencia">Experiencia</a></td>
       </tr>
     </tbody>
   </table>
@@ -288,13 +295,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/articles">Articles</a></td>
+        <td><a href="/es/servicios">Servicios</a></td>
       </tr>
       <tr>
-        <td><a href="/resources">Resources</a></td>
+        <td><a href="mailto:pr@xeleh.com">Contacto</a></td>
       </tr>
       <tr>
-        <td><a href="/store">Store</a></td>
+        <td><a href="/es/legal">Legal</a></td>
       </tr>
     </tbody>
   </table>
@@ -306,13 +313,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/news">News</a></td>
+        <td><a href="/es/articulos">Artículos</a></td>
       </tr>
       <tr>
-        <td><a href="/downloads">Downloads</a></td>
+        <td><a href="/es/recursos">Recursos</a></td>
       </tr>
       <tr>
-        <td><a href="/support">Support</a></td>
+        <td><a href="/es/tienda">Tienda</a></td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
+
+<div class="col-12 col-sm-3">
+
+  <table>
+    <tbody>
+      <tr>
+        <td><a href="/es/noticias">Noticias</a></td>
+      </tr>
+      <tr>
+        <td><a href="/es/descargas">Descargas</a></td>
+      </tr>
+      <tr>
+        <td><a href="/es/apoyo">Apoyo</a></td>
       </tr>
     </tbody>
   </table>
@@ -328,22 +353,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/about">About</a></td>
+        <td><a href="/es/acerca">Acerca</a></td>
       </tr>
       <tr>
-        <td><a href="/experience">Experience</a></td>
+        <td><a href="/es/experiencia">Experiencia</a></td>
       </tr>
       <tr>
-        <td><a href="/projects">Projects</a></td>
+        <td><a href="/es/proyectos">Proyectos</a></td>
       </tr>
       <tr>
-        <td><a href="/resources">Resources</a></td>
+        <td><a href="/es/recursos">Recursos</a></td>
       </tr>
       <tr>
-        <td><a href="mailto:pr@xeleh.com">Contact</a></td>
+        <td><a href="mailto:pr@xeleh.com">Contacto</a></td>
       </tr>
       <tr>
-        <td><a href="/legal">Legal</a></td>
+        <td><a href="/es/legal">Legal</a></td>
       </tr>
     </tbody>
   </table>
@@ -355,22 +380,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <table>
     <tbody>
       <tr>
-        <td><a href="/news">News</a></td>
+        <td><a href="/es/noticias">Noticias</a></td>
       </tr>
       <tr>
-        <td><a href="/services">Services</a></td>
+        <td><a href="/es/servicios">Servicios</a></td>
       </tr>
       <tr>
-        <td><a href="/articles">Articles</a></td>
+        <td><a href="/es/articulos">Artículos</a></td>
       </tr>
       <tr>
-        <td><a href="/downloads">Downloads</a></td>
+        <td><a href="/es/descargas">Descargas</a></td>
       </tr>
       <tr>
-        <td><a href="/store">Store</a></td>
+        <td><a href="/es/tienda">Tienda</a></td>
       </tr>
       <tr>
-        <td><a href="/support">Support</a></td>
+        <td><a href="/es/apoyo">Apoyo</a></td>
       </tr>
     </tbody>
   </table>
@@ -388,7 +413,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-© 2020 <a href="/">Xeleh</a>
+© 2020 <a href="/es">Xeleh</a>
 </div>
 <div class="social-icons col">
 <a class="pr-2" href="mailto:pr@xeleh.com"><i class="fa fa-envelope-square"></i></a>
