Added ko-fi link

--- a/es/apoyo.html
+++ b/es/apoyo.html
@@ -240,8 +240,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p>Por supuesto, puedes:</p>
 <ul>
-  <li>Hacer una <a href="https://www.paypal.me/xeleh">contribución puntual via Paypal</a> de la cantidad que tú estimes oportuna,</li>
-  <li>Invitarme a <a href="https://www.buymeacoffee.com/xeleh">un café virtual</a> que me beberé a tu salud, o</li>
+  <li>Hacer una <a href="https://paypal.me/xeleh">contribución puntual via Paypal</a> de la cantidad que tú estimes oportuna,</li>
+  <li>Invitarme a <strong>un café virtual</strong> <a href="https://buymeacoffee.com/xeleh">aquí</a> o <a href="https://ko-fi.com/xeleh">aquí</a> que me beberé a tu salud, o</li>
   <li>Ayudar a difundir mi trabajo compartiéndolo con tus seguidores y otras personas a las que les pudiese interesar. Puedes seguirme en estas redes sociales:</li>
 </ul>
 
