--- a/support.html
+++ b/support.html
@@ -239,8 +239,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h2 id="can-i-support-your-work-in-any-other-way">Can I support your work in any other way?</h2>
 <p>Of course, you can:</p>
 <ul>
-  <li>Make a <a href="https://www.paypal.me/xeleh">one-time contribution via Paypal</a> of the amount you deem appropriate,</li>
-  <li>Invite me to <a href="https://www.buymeacoffee.com/xeleh">a virtual coffee</a> that I will drink to your health, or</li>
+  <li>Make a <a href="https://paypal.me/xeleh">one-time contribution via Paypal</a> of the amount you deem appropriate,</li>
+  <li>Invite me to <strong>a virtual coffee</strong> <a href="https://buymeacoffee.com/xeleh">here</a> or <a href="https://ko-fi.com/xeleh">here</a> that I will drink to your health, or</li>
   <li>Help spread the word about my work by sharing it with your followers and others who might be interested. You can follow me on these social networks:</li>
 </ul>
 
