Revised services intro

--- a/es/servicios.html
+++ b/es/servicios.html
@@ -216,9 +216,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1>Servicios</h1>
 
 
-<p>Aquí encontarás una descripción de los servicios que ofrezco actualmente tanto a empresas como a particulares.</p>
+<p>Aunque tengo experiencia en muchas tecnologías, en los últimos años me he especializado en el desarrollo de herramientas para el motor de videojuegos <a href="https://unity.com">Unity</a>, en soluciones de automatización y en control de calidad.</p>
 
-<p>Mi área de especialidad es actualmente el motor de videojuegos <a href="https://unity.com">Unity</a>, aunque gracias a mi experiencia también puedo aportar soluciones a problemas de automatización, de control de calidad y de otra índole aún más especializada.</p>
+<p>A continuación encontrarás una lista detallada de los servicios que ofrezco actualmente tanto a empresas como a particulares.</p>
 
 <hr />
 <h2 id="herramientas-unity-a-medida">Herramientas Unity a medida</h2>
