--- a/services.html
+++ b/services.html
@@ -216,9 +216,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1>Services</h1>
 
 
-<p>Here you will find a description of the services I currently offer to both companies and individuals.</p>
+<p>Although I have experience in many technologies, in recent years I have specialized in tools development for the <a href="https://unity.com">Unity</a> game engine, automation solutions and quality control.</p>
 
-<p>My area of expertise is currently the <a href="https://unity.com">Unity</a> game engine, although thanks to my experience I can also provide solutions to automation, quality control and other even more specialized problems.</p>
+<p>Below you will find a detailed list of the services I currently offer to both companies and individuals.</p>
 
 <hr />
 <h2 id="custom-unity-tools">Custom Unity tools</h2>
