--- a/es/articulos/el-tema-oscuro.html
+++ b/es/articulos/el-tema-oscuro.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/articles/the-dark-theme.html">EN</a>
+<a class="lang-link" href="/articles/the-dark-theme">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
