--- a/es/articulos/posadas-amiga-party-1995.html
+++ b/es/articulos/posadas-amiga-party-1995.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/articles/posadas-amiga-party-1995-en.html">EN</a>
+<a class="lang-link" href="/articles/posadas-amiga-party-1995-en">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
