--- a/es/proyectos/custom-trac.html
+++ b/es/proyectos/custom-trac.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/projects/custom-trac.html">EN</a>
+<a class="lang-link" href="/projects/custom-trac">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
