--- a/projects/course-data-editor.html
+++ b/projects/course-data-editor.html
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <span class="lang-link disabled">EN</span>
-<a class="lang-link" href="/es/proyectos/course-data-editor.html">ES</a>
+<a class="lang-link" href="/es/proyectos/course-data-editor">ES</a>
 
 
 </div>
