--- a/es/articulos/no-debes-estar-haciendolo-tan-bien.html
+++ b/es/articulos/no-debes-estar-haciendolo-tan-bien.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/articles/you-must-not-be-doing-so-well.html">EN</a>
+<a class="lang-link" href="/articles/you-must-not-be-doing-so-well">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
