--- a/es/experiencia.html
+++ b/es/experiencia.html
@@ -203,7 +203,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/experience.html">EN</a>
+<a class="lang-link" href="/experience">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
