--- a/es/noticias/b-days-disponible.html
+++ b/es/noticias/b-days-disponible.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/news/b-days-released.html">EN</a>
+<a class="lang-link" href="/news/b-days-released">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
