--- a/es/noticias/xt-utilities-07b.html
+++ b/es/noticias/xt-utilities-07b.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/news/xt-utilities-07b.html">EN</a>
+<a class="lang-link" href="/news/xt-utilities-07b">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
