--- a/es/proyectos/amishell.html
+++ b/es/proyectos/amishell.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/projects/amishell.html">EN</a>
+<a class="lang-link" href="/projects/amishell">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
