--- a/es/proyectos/j2me-gaming.html
+++ b/es/proyectos/j2me-gaming.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/projects/j2me-gaming.html">EN</a>
+<a class="lang-link" href="/projects/j2me-gaming">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
