--- a/es/proyectos/porting-j2me.html
+++ b/es/proyectos/porting-j2me.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/projects/porting-j2me.html">EN</a>
+<a class="lang-link" href="/projects/porting-j2me">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
