--- a/es/proyectos/soccer-data-editor.html
+++ b/es/proyectos/soccer-data-editor.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<a class="lang-link" href="/projects/soccer-data-editor.html">EN</a>
+<a class="lang-link" href="/projects/soccer-data-editor">EN</a>
 <span class="lang-link disabled">ES</span>
 
 
