--- a/legal.html
+++ b/legal.html
@@ -204,7 +204,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <span class="lang-link disabled">EN</span>
-<a class="lang-link" href="/es/legal.html">ES</a>
+<a class="lang-link" href="/es/legal">ES</a>
 
 
 </div>
