Added Downloads section

--- a/es/descargas.html
+++ b/es/descargas.html
@@ -214,7 +214,101 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1>Descargas</h1>
 
 
-<p>Página en preparación.</p>
+<hr />
+<h2 id="juegos">Juegos</h2>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Vitrun</td>
+      <td><a class="btn btn-sm download" href="/downloads/Vitrun-Win.zip">PC<i class="fa fa-download pl-2"></i></a><a class="btn btn-sm download" href="/downloads/Vitrun-Mac.zip">Mac<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Vitrun Air</td>
+      <td><a class="btn btn-sm download" href="/downloads/VitrunAir-Win.zip">PC<i class="fa fa-download pl-2"></i></a><a class="btn btn-sm download" href="/downloads/VitrunAir-Mac.dmg">Mac<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+  </tbody>
+</table>
+
+<hr />
+<h2 id="herramientas-unity">Herramientas Unity</h2>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Editor Enhancer</td>
+      <td><a class="btn btn-sm download" href="/downloads/com.xeleh.enhancer-0.3.5.tgz">Unity<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>GameFlow</td>
+      <td><a class="btn btn-sm download" href="/downloads/GameFlow1.2.5.unitypackage">Unity<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+  </tbody>
+</table>
+
+<hr />
+<h2 id="desarrollo-retro">Desarrollo Retro</h2>
+
+<table>
+  <tbody>
+    <tr>
+      <td>AmiShell</td>
+      <td><a class="btn btn-sm download" href="/downloads/amishell-1.0.0.tgz">Node.js<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>AmigaCode</td>
+      <td><button class="btn btn-outline-secondary btn-sm download" disabled="">VSCode<i class="fa fa-download pl-2"></i></button></td>
+    </tr>
+  </tbody>
+</table>
+
+<hr />
+<h2 id="demoscene">Demoscene</h2>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Trashcan #0 (ES)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan0.adf">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #1 (ES)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan1.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #2 (ES)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan2.adf">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #3 (EN)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan3en.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #3 (ES)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan3es.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #4 (EN)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan4en.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #4 (ES)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan4es.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Trashcan #5 (EN)</td>
+      <td><a class="btn btn-sm download" href="/downloads/Trashcan5.zip">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>IntroXele</td>
+      <td><a class="btn btn-sm download" href="/downloads/IntroXele.adf">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+    <tr>
+      <td>Odrusba BBStro</td>
+      <td><a class="btn btn-sm download" href="/downloads/OdrusbaBBS.adf">Amiga<i class="fa fa-download pl-2"></i></a></td>
+    </tr>
+  </tbody>
+</table>
 
 <hr>
 </div>
