Minor fixes in texts

--- a/experience.html
+++ b/experience.html
@@ -253,7 +253,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="section d-flex flex-wrap p-0"><div class="section-col1 col-md-3">
 <span class="dates">Feb 2016 – Oct 2016</span></div><div class="section-col2 col-md-8">
 
-    <h3>External Consultant</h3>
+    <h3>Freelance Consultant</h3>
     <h4><b>Virtually Live</b> · Málaga (Spain)</h4>
     <p>Development of customized Unity tools for Virtual Reality projects related to sports events. Consulting for the organization of the development and application of agile methodologies.</p>
 
@@ -312,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <span class="dates">Nov 2008 – Aug 2010</span></div><div class="section-col2 col-md-8">
 
     <h3>iOS Developer</h3>
-    <h4><b>Autónomo</b> · Málaga (Spain)</h4>
+    <h4><b>Freelance</b> · Málaga (Spain)</h4>
     <p>Specialized consultancy in iOS application development. Management, programming, quality control, marketing and support. Custom app development. Technical documentation. Production of several own apps: <a href="/projects/bingo-touch">Bingo Touch</a>, <a href="/projects/smart-groups">Smart Groups</a>, <a href="/projects/b-days">B-Days</a> y <a href="/projects/best-apps">Best Apps</a>.</p>
 
     <div class="tags">
