--- a/projects/index.html
+++ b/projects/index.html
@@ -403,7 +403,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <div class="section d-flex flex-wrap p-0"><div class="section-col1 col-md-3">
-<span class="project-name"><a href="/projects/porting-j2me">Sistema de porting J2ME</a></span><div><p class="subtext mb-sm-2 mb-md-0">2005 - 2007</p></div></div><div class="section-col2 col-md-8">
+<span class="project-name"><a href="/projects/porting-j2me">J2ME Porting System</a></span><div><p class="subtext mb-sm-2 mb-md-0">2005 - 2007</p></div></div><div class="section-col2 col-md-8">
 
     <p>System to generate automatic J2ME ports for a wide range of devices through code pre-processing.</p>
 
